--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -202,13 +202,13 @@
 	  
 	  #main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
 	  #main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
-	  #main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
+	  #main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
 		padding-top: 2px !important;
 	  }
 
-	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-min image,
-	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-max image,
-	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-close image {
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-min image,
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-max image,
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-close image {
 		min-height: 10px !important;
 		height: 10px !important;
 		max-height: 10px !important;
@@ -219,9 +219,9 @@
 	  
 	  @media not all and (-moz-windows-theme:aero) {
 			
-		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-min image,
-		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-max image,
-		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-close image {
+		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-min image,
+		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-max image,
+		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-close image {
 		  min-height: 0px !important;
 		  height: 8px !important;
 		  max-height: 8px !important;
@@ -236,7 +236,7 @@
 
 		#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
 		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
-		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
+		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
 		  padding-top: 7px !important;
 		}
 
