--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -830,7 +830,8 @@
 	
 	#ctraddon_pw_alt_addonsp label,
 	#ctraddon_pw_alt_addonsm label,
-	#ctraddon_pw_addonversion label {
+	#ctraddon_pw_addonversion label,
+	#ctraddon_pw_am_nowarning label {
 	  background:url('chrome://classic_theme_restorer/content/images/appmenu_addons_lin.png') no-repeat left !important;
 	  padding-left:20px !important;
 	  min-height:16px !important;
