--- a/xpi/content/css/appbutton2io.css
+++ b/xpi/content/css/appbutton2io.css
@@ -37,6 +37,11 @@
 		#ctraddon_appbutton2 > .toolbarbutton-icon {
 		  padding: 1px 9px !important;
 		}
+		@media not all and (-moz-windows-theme:aero) {
+		  #main-window[tabsintitlebar][sizemode="normal"] #TabsToolbar .titlebar-placeholder{
+			visibility:collapse !important;
+		  }
+		}
 	}
 
 	#ctraddon_appbutton2 > .toolbarbutton-menu-dropmarker{
