--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -13,7 +13,7 @@
 	
 	#main-window[fx42plus="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 1px !important;
-	  -moz-padding-start: 3px !important;
+	  -moz-padding-end: 3px !important;
 	}
 	
 	#nav-bar #notification-popup-box:not([hidden]) {
