--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -186,8 +186,8 @@
 	/* Windows 10 tweaks */
 	@media (-moz-os-version: windows-win10) {
 	  #main-window[sizemode="normal"] #ctraddon_appbutton2{
-		margin-top:1px !important;
-		margin: 1px 0 0px 0px !important;
+		margin-top:0px !important;
+		margin: 0 0 0 0 !important;
 	  }
 				
 	  #main-window[sizemode="maximized"] #ctraddon_appbutton2{
@@ -209,35 +209,46 @@
 	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-min image,
 	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-max image,
 	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-close image {
-		min-height: 10px !important;
-		height: 10px !important;
-		max-height: 10px !important;
-		margin-top: -4px !important;
 		margin-bottom: -4px !important;
 	  }
-
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-min,
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-max,
+	  #main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-close {
+		margin-bottom: -4px !important;
+		padding-top: 10px !important;
+		padding-bottom: 6px !important;
+	  }
 	  
 	  @media not all and (-moz-windows-theme:aero) {
+		
+		#main-window[sizemode="normal"] #titlebar #titlebar-content #ctraddon_appbutton2{
+		  margin-top:0px !important;
+		  margin: 0px 0 0px 0px !important;
+		}
+		
+		#main-window[sizemode="maximized"] #titlebar #titlebar-content #ctraddon_appbutton2{
+		  margin-top:-1px !important;
+		  margin: -1px 0 6px -2px !important;
+		}
 			
 		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-min image,
 		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-max image,
 		#main-window[sizemode="normal"]:not([inFullscreen]) * #titlebar-buttonbox #titlebar-close image {
-		  min-height: 0px !important;
-		  height: 8px !important;
-		  max-height: 8px !important;
-		  margin-top: 0px !important;
-		  margin-bottom: 0px !important;
+		  margin-bottom: -4px !important;
 		}
-
-		#main-window[sizemode="maximized"] #titlebar #titlebar-content #ctraddon_appbutton2{
-		  margin-top:-1px !important;
-		  margin: -1px 0 6px -2px !important;
+		
+		#main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-min,
+		#main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-max,
+		#main-window[sizemode="normal"]:not([inFullscreen]) #titlebar-buttonbox #titlebar-close {
+		  margin-bottom: -2px !important;
+		  padding-top: 10px !important;
+		  padding-bottom: 6px !important;
 		}
 
 		#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
 		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
 		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
-		  padding-top: 7px !important;
+		  padding-top: 9px !important;
 		}
 
 	  }
