--- a/xpi/content/css/winaero/smallnavbutextra.css
+++ b/xpi/content/css/winaero/smallnavbutextra.css
@@ -11,9 +11,10 @@
 	  transition: none !important;
 	}
 	
-	#main-window[fx42plus="true"] #nav-bar #notification-popup-box[hidden] + * {
+	#main-window[fx42plus="true"][defaultfxtheme="true"] #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + *,
+	#main-window[fx42plus="true"] #navigator-toolbox #nav-bar #urlbar-container #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 1px !important;
-	  -moz-padding-start: 3px !important;
+	  -moz-padding-end: 3px !important;
 	}
 
 	#nav-bar #notification-popup-box:not([hidden]) {
