--- a/xpi/content/css/winxp/back-forwardextra.css
+++ b/xpi/content/css/winxp/back-forwardextra.css
@@ -19,7 +19,8 @@
 	}
 	
 	#main-window[fx42plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 5px !important;
+	  -moz-padding-start: 3px !important;
+	  /*-moz-padding-end: 5px !important;*/
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box:not([hidden]) {
