--- a/xpi/content/css/transp_top_tb_w10.css
+++ b/xpi/content/css/transp_top_tb_w10.css
@@ -5,11 +5,34 @@
     #main-window[fx40plus="true"]:not([customizing]){
       background-color: transparent !important;
     }
+		
+	@media (-moz-windows-theme:aero) {
+	  #main-window[fx40plus="true"]:not([customizing]) .titlebar-button,
+	  #main-window[fx40plus="true"]:not([customizing]) .titlebar-button:not(#titlebar-close) > .toolbarbutton-icon{
+		opacity: 0 !important;
+	  }
+	  #main-window[fx40plus="true"]:not([customizing]) .titlebar-button:hover {
+		opacity: 1 !important;
+	  }
+	}
 	
 	/* allows titlebar colors for caption buttons for non OS default visual styles */
 	@media not all and (-moz-windows-theme:aero) {
       #main-window[fx40plus="true"]:not([customizing]) .titlebar-button{
-		background-color: transparent !important;
+        opacity: 0 !important;
+        background: black !important;
+      }
+      #main-window[fx40plus="true"]:not([customizing]) #titlebar-close {
+        background: #e81123 !important;
+      }
+      #main-window[fx40plus="true"]:not([customizing]) .titlebar-button:not(#titlebar-close) > .toolbarbutton-icon {
+        opacity: 0 !important;
+      }
+	  #main-window[fx40plus="true"]:not([customizing]) .titlebar-button:hover {
+        opacity: 0.1 !important;
+      }
+      #main-window[fx40plus="true"]:not([customizing]) #titlebar-close:hover {
+        opacity: 1 !important;
       }
 	}
   }
