--- a/xpi/content/css/win8/back-forwardextra.css
+++ b/xpi/content/css/win8/back-forwardextra.css
@@ -14,12 +14,17 @@
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 5px !important;
+	  -moz-padding-start: 2px !important;
 	  transition: none !important;
 	}
 	
 	#main-window[fx42plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 5px !important;
+	  -moz-padding-start: 3px !important;
+	}
+	
+	#main-window[fx43plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	  -moz-padding-start: 4px !important;
+	  -moz-padding-end: 3px !important;
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box:not([hidden]) {
@@ -67,6 +72,37 @@
 	  #main-window[defaultfxtheme="true"] .searchbar-textbox:not(:-moz-lwtheme)[focused] {
 		border-color: Highlight !important;
 	  }
+	}
+	
+	@media (-moz-os-version: windows-win10) {
+		#main-window[defaultfxtheme="true"] #urlbar,
+		#main-window[defaultfxtheme="true"] .searchbar-textbox {
+		  border: 1px solid hsl(0,0%,90%) !important;
+		}
+		@media (-moz-windows-default-theme) {
+		  #main-window[defaultfxtheme="true"] #urlbar,
+		  #main-window[defaultfxtheme="true"] .searchbar-textbox {
+			border-color: hsl(0,0%,90%) !important;
+		  }
+		}
+		#main-window[defaultfxtheme="true"] #urlbar:-moz-lwtheme,
+		#main-window[defaultfxtheme="true"] .searchbar-textbox:-moz-lwtheme {
+		  border-color: rgba(0,0,0,.32) !important;
+		}
+		@media (-moz-windows-default-theme) {
+		  #main-window[defaultfxtheme="true"] #urlbar:not(:-moz-lwtheme),
+		  #main-window[defaultfxtheme="true"] .searchbar-textbox:not(:-moz-lwtheme) {
+			border-color: hsl(0,0%,90%) !important;
+		  }
+		  #main-window[defaultfxtheme="true"] #urlbar:hover:not(:-moz-lwtheme),
+		  #main-window[defaultfxtheme="true"] .searchbar-textbox:hover:not(:-moz-lwtheme) {
+			border-color: hsl(0,0%,80%) !important;
+		  }
+		  #main-window[defaultfxtheme="true"] #urlbar:not(:-moz-lwtheme)[focused],
+		  #main-window[defaultfxtheme="true"] .searchbar-textbox:not(:-moz-lwtheme)[focused] {
+			border-color: Highlight !important;
+		  }
+		}
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 	
