--- a/xpi/content/css/invicons_bookmarksbar.css
+++ b/xpi/content/css/invicons_bookmarksbar.css
@@ -6,6 +6,7 @@
 	#PersonalToolbar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_go-button) .toolbarbutton-icon,
 	#PersonalToolbar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
 	#PersonalToolbar #panic-button:not([open]),
+	#PersonalToolbar #pocket-button:not([open]),
 	#PersonalToolbar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
 	}
@@ -57,7 +58,8 @@
 	#PersonalToolbar #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
 	  -moz-image-region: rect(0, 180px, 18px, 162px) !important;
 	}
-	#PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container {
+	#PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
+	#PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
   }
