--- a/xpi/content/css/linux/back-forwardextra.css
+++ b/xpi/content/css/linux/back-forwardextra.css
@@ -27,7 +27,12 @@
 	}
 	
 	#main-window[fx42plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 5px !important;
+	  -moz-padding-start: 3px !important;
+	}
+	
+	#main-window[fx43plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	  -moz-padding-start: 4px !important;
+	  -moz-padding-end: 3px !important;
 	}
 
 	* #notification-popup-box:not([hidden]) {
