--- a/xpi/content/css/winxp/back-forwardextra.css
+++ b/xpi/content/css/winxp/back-forwardextra.css
@@ -20,7 +20,11 @@
 	
 	#main-window[fx42plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 3px !important;
-	  /*-moz-padding-end: 5px !important;*/
+	}
+	
+	#main-window[fx43plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	  -moz-padding-start: 4px !important;
+	  -moz-padding-end: 3px !important;
 	}
 
 	#main-window[defaultfxtheme="true"] #notification-popup-box:not([hidden]) {
