--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -140,11 +140,6 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/menuPanel2.png") !important;
 	  -moz-image-region: rect(0px, 32px, 32px, 0px) !important;
 	}
-	toolbar .toolbarbutton-badge-stack image,
-	toolbar #PanelUI-menu-button .toolbarbutton-badge-container image{
-	  min-width:32px !important;
-      min-height:32px !important;
-	}
 
 	#nav-bar #cut-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/menuPanel2.png") !important;
@@ -261,7 +256,7 @@
 	}
 	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-container image,
 	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"]  > .toolbarbutton-badge-stack image {
+	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-stack image {
 	  -moz-image-region: rect(0, 192px, 32px, 160px) !important;
 	}
 	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
@@ -270,9 +265,9 @@
 	  -moz-image-region: rect(0, 224px, 32px, 192px) !important;
 	}
 	#nav-bar .toolbarbutton-badge-stack image,
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container image {
-	  min-width: 32px !important;
+	#nav-bar .toolbarbutton-badge-container image {
+	  min-width:32px !important;
+      min-height:32px !important;
 	}
 	
 	/*CTR button*/
