--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -515,6 +515,9 @@
 	  visibility: collapse;
 	}
 	
+	#ClassicTRoptionsPane[defaultfxtheme="true"] textbox{
+	  min-height:22px !important;
+	}
 	#ctraddon_fontbox textbox {
 	  min-width: 50px !important;
 	  width: 122px !important;
@@ -608,8 +611,8 @@
 	}
 	
 	.ctraddontabpanel {
-	  height:400px;
-	  max-height:450px;
+	  height:420px;
+	  max-height:470px;
 	  min-width:500px;
 	  width:480px;
 	  max-width:800px;
@@ -755,7 +758,7 @@
 	#ctraddon_closeicon_w10 image,
 	#ctraddon_closeicon_w10i image,
 	#ctraddon_closeicon_w10red image {
-	  width: 20px;
+	  width: 16px;
 	}
 
 	#ctraddon_closeicon_red,
@@ -918,8 +921,14 @@
 	  min-height:16px !important;
 	}
 	
+	#ctraddon_pw_xpinstallui label,
+	#ctraddon_pw_alt_addonsm label {
+	  background:url('chrome://classic_theme_restorer/content/images/appmenu_addons.png') no-repeat left !important;
+	  padding-left:20px !important;
+	  min-height:16px !important;
+	}
+	
 	#ctraddon_pw_alt_addonsp label,
-	#ctraddon_pw_alt_addonsm label,
 	#ctraddon_pw_addonversion label,
 	#ctraddon_pw_am_nowarning label {
 	  background:url('chrome://classic_theme_restorer/content/images/appmenu_addons_lin.png') no-repeat left !important;
