--- a/xpi/content/css/tab_sep-inv.css
+++ b/xpi/content/css/tab_sep-inv.css
@@ -12,5 +12,20 @@
       background-image: url(chrome://classic_theme_restorer/content/images/tab-separator-inv.png) !important;
       opacity:1.0 !important;
 	}
+	
+	#main-window[fx43plus="true"] #navigator-toolbox #TabsToolbar #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar .tabbrowser-tab:not([visuallyselected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not([beforehovered]):not(:hover)::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar .tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
+	  background-color: unset !important;
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	  background-size: 3px 100% !important;
+	  width:3px !important;
+	  -moz-margin-start: -1.5px !important;
+	  -moz-margin-end: -1.5px !important;
+	}
   
 }
