--- a/xpi/content/css/tab_sep_solid-inv2.css
+++ b/xpi/content/css/tab_sep_solid-inv2.css
@@ -12,5 +12,18 @@
 	  background-size: 1px 100% !important;
       opacity:1.0 !important;
 	}
+	
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar .tabbrowser-tab:not([visuallyselected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not([beforehovered]):not(:hover)::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar .tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#main-window[fx43plus="true"]  #navigator-toolbox #TabsToolbar #tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
+	  background-color: unset !important;
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	  /*background-size: 1px 100% !important;
+	  width:1px !important;*/
+	}
   
 }
