--- a/xpi/content/css/close_icon_g_w7.css
+++ b/xpi/content/css/close_icon_g_w7.css
@@ -1,20 +1,15 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-@-moz-document url(chrome://browser/content/browser.xul){
-
-	#main-window *:not(#TabsToolbar):not(.tab-content) > .close-icon{
-	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png") !important;
-	}
-	#main-window *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover{
-	  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
-	}
-	#main-window *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
-	  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
-	}
-
-	#TabsToolbar .close-icon > .toolbarbutton-icon {
-	  width: 16px !important;
-	}
-
+*:not(#TabsToolbar):not(.tab-content) > .close-icon{
+  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png") !important;
+}
+*:not(#TabsToolbar):not(.tab-content) > .close-icon:hover{
+  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
+}
+*:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
+  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
+}
+*:not(#TabsToolbar):not(.tab-content) > .close-icon > .toolbarbutton-icon {
+  width: 16px !important;
 }
