--- a/xpi/content/css/invicons_menubar.css
+++ b/xpi/content/css/invicons_menubar.css
@@ -63,4 +63,78 @@
 	  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted.png) !important;
 	}
   }
+  
+  @media  (-moz-os-version: windows-xp),
+		  (-moz-os-version: windows-vista),
+		  (-moz-os-version: windows-win7),
+		  (-moz-os-version: windows-win8),
+		  (-moz-os-version: windows-win10){
+  
+	  @media (min-resolution: 1.1dppx) {
+		
+		#main-window[fx40plus="true"] #toolbar-menubar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_go-button) .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #toolbar-menubar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #toolbar-menubar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
+		#main-window[fx40plus="true"] #toolbar-menubar #panic-button:not([open]),
+		#main-window[fx40plus="true"] #toolbar-menubar #pocket-button:not([open]),
+		#main-window[fx40plus="true"] #toolbar-menubar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+		  list-style-image: url(chrome://browser/skin/Toolbar-inverted@2x.png) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #sync-button[status="active"],
+		#main-window[fx40plus="true"] #toolbar-menubar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
+		  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted@2x.png") !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
+		  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted@2x.png"), 0, 396, 36, 360) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #downloads-button[attention] > #downloads-indicator-anchor > #downloads-indicator-icon {
+		  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted@2x.png"), 36, 396, 72, 360) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar .toolbarbutton-1 > .toolbarbutton-menu-dropmarker,
+		#main-window[fx40plus="true"] #toolbar-menubar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
+		  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up,
+		#main-window[fx40plus="true"] #toolbar-menubar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
+		  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted@2x.png) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar > #alltabs-button,
+		#main-window[fx40plus="true"] #toolbar-menubar > toolbarpaletteitem > #alltabs-button {
+		  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
+		}
+		
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_back-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 108px, 36px, 72px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_go-button:not([cui-areatype="menu-panel"]),
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_forward-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 144px, 36px, 108px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_stop-button:not([cui-areatype="menu-panel"]){
+		  -moz-image-region: rect(0, 216px, 36px, 180px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_reload-button:not([cui-areatype="menu-panel"]){
+		  -moz-image-region: rect(0, 180px, 36px, 144px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_bookmarks-menu-toolbar-button:not([cui-areatype="menu-panel"]),
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_bookmarks-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 288px, 36px, 252px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_history-button:not([cui-areatype="menu-panel"]),
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_history-menu-toolbar-button:not([cui-areatype="menu-panel"]){
+		  -moz-image-region: rect(0, 360px, 36px, 324px) !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
+		#main-window[fx40plus="true"] #toolbar-menubar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
+		  list-style-image: url(chrome://browser/skin/loop/toolbar-inverted@2x.png) !important;
+		}
+		
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
+		  width: 18px !important;
+		}
+		#main-window[fx40plus="true"] #toolbar-menubar #downloads-button .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #toolbar-menubar #ctraddon_bookmarks-button .toolbarbutton-icon {
+		  width: 18px !important;
+		}
+	  }
+  }
 }
