--- a/xpi/content/css/tabs_squared2.css
+++ b/xpi/content/css/tabs_squared2.css
@@ -320,6 +320,7 @@
 	.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
 	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
 	  background-image: none !important;
+	  background-color: unset !important;
 	}
 	
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
