--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -942,7 +942,8 @@
 	  padding-left:20px !important;
 	  min-height:16px !important;
 	}
-
+	
+	#ctraddon_pw_altoptionsp label,
 	#ctraddon_pw_oldprefs label {
 	  background:url('chrome://classic_theme_restorer/content/images/prefs_incontent.png') no-repeat left !important;
 	  padding-left:20px !important;
